[package]
name = "charling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.27", features = ["derive"] }
kurbo = "0.9.0"
piet = "0.6.0"
piet-svg = "0.6.0"
rlua = "0.19.4"
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
