[package]
name = "charling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
cairo-rs = { version = "0.16.3", features = ["pdf", "png", "svg"], default-features = false }
clap = { version = "4.0.27", features = ["derive"] }
css-color-parser = "0.1.2"
kurbo = "0.9.0"
more-asserts = "0.3.1"
piet = "0.6.0"
piet-cairo = "0.6.0"
piet-svg = "0.6.0"
rlua = "0.19.4"
scopeguard = "1.1.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
thiserror = "1.0.37"
