[package]
name = "charlt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.27", features = ["derive"] }
css-color-parser = "0.1.2"
csv = "1.1.6"
kurbo = "0.9.0"
more-asserts = "0.3.1"
plotters = "0.3.4"
plotters-backend = "0.3.4"
rlua = "0.19.4"
scopeguard = "1.1.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
thiserror = "1.0.37"
